--- a/package/streamsx/wml/spl/toolkit.wml/com.ibm.streams.wml/opt/python/streams/requirements.txt
+++ b/package/streamsx/wml/spl/toolkit.wml/com.ibm.streams.wml/opt/python/streams/requirements.txt
@@ -5,4 +5,4 @@
 #scipy == 1.1.0
 #pandas == 0.22
 #tqdm == 4.31.1
-watson-machine-learning-client-v4 == 1.0.60          
+watson-machine-learning-client-v4 >= 1.0.60          
